# gnl2

./: 1  11  120  2  3  36000  480  5_lines  CMakeLists.txt  README.md  a.c  a.out  chinese_4000  co  fd3  fd4  fd5  few_short_lines  get_next_line.c  get_next_line.h  gnl_questions  gnl_stach.c  line  long_line  main.c  main_multiple_fd.c  main_single_fd.c  mazafaka2.txt  simple_line  test_gnl  text  Гертруда_Стайн  Керниган_Ричи_Язык_C
a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strjoin_del_s1.c  ft_strlen.c  ft_strnew.c  libft.h
myprog.dSYM/Contents/Resources/DWARF/: myprog
